--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,11 @@ p {
   margin: 0;
 }
 .container {
-  width: 1128px;
+  max-width: 1128px;
+  width: 100%;
   margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .none {
   /* padding: 0;
