--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,12 +1,15 @@
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 766px;
+    max-width: 764px;
   }
   .info {
       padding-top: 96px;
       padding-bottom: 96px;
   }
+}
 
-
-  
+@media screen and (min-width: 768px), (max-width: 1199px){
+    .container-sm {
+        max-width: 736px;
+    }
 }
