--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,8 @@ p {
   max-width: 1128px;
   width: 100%;
   margin: 0 auto;
-  padding-left: 16px;
-  padding-right: 16px;
+  /* padding-left: 16px;
+  padding-right: 16px; */
 }
 .none {
   /* padding: 0;
@@ -258,43 +258,54 @@ p {
   background: var(--dop-color);
 }
 .info {
-  padding: 120px 0 0 0;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .info-title {
 }
 .info-list {
   margin: 0;
+  padding: 16px;
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 72px;
 }
 .info-item {
+  /* width: 264px;
+  width: calc((100% - 72) / 4); */
 }
 .info-block {
-  background: #f4f4fd;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: none;
 }
 .info-block-icon {
-  height: 112px;
+  /* height: 112px; */
 }
 .info-subtitle {
   /* font-family: 'Roboto';
     font-style: normal; */
-  font-weight: 500;
+  /* font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.2; */
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 40px;
   letter-spacing: 0.02em;
+  display: flex;
+  justify-content: center;
   /* color: #2E2F42; */
   margin: 0;
   margin-bottom: 8px;
-  margin-top: 8px;
+  /* margin-top: 8px; */
 }
 .info-text {
   /* font-family: 'Roboto';
     font-style: normal; */
-  /* font-weight: 400; */
+  /* font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em; */
+
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -302,7 +313,8 @@ p {
   margin: 0;
 }
 .examples {
-  padding: 120px 0;
+  /* padding: 120px 0; */
+  display: none;
 }
 .examples-title {
   /* font-family: 'Roboto';
@@ -321,7 +333,8 @@ p {
   gap: 24px;
 }
 .team {
-  padding: 120px 0;
+  padding-top: 96px;
+  padding-bottom: 96px;
   background-color: #f4f4fd;
 }
 .team-title {
@@ -338,7 +351,9 @@ p {
 }
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 72px;
   margin: 0;
 }
 .team-item {
@@ -347,6 +362,8 @@ p {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+  width: 264px;
+  height: 428px;
 }
 .team-element {
   padding: 32px 0;
@@ -404,7 +421,8 @@ p {
 .team-social-icon {
 }
 .castomers {
-  padding: 130px 0 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
   background-color: var(--white-color);
 }
 .castomers-container {
@@ -425,11 +443,14 @@ p {
 }
 .castomers-list {
   display: flex;
-  justify-content: center;
-  gap: 24px;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  gap: 72px 16px;
+  /* flex-wrap: wrap; */
 }
 .castomers-item {
-  width: 168px;
+  width: 190px;
   height: 88px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
