--- a/css/desktop.css
+++ b/css/desktop.css
@@ -3,11 +3,13 @@
     max-width: 1128px;
   }
   .hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
     background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/people-office.jpg);
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
   }
   .hero-title {
     margin-bottom: 48px;
