--- a/css/desktop.css
+++ b/css/desktop.css
@@ -86,9 +86,10 @@
     display: flex;
     flex-direction: row;
     gap: 0;
+    width: auto;
+    height: auto;
   }
-  .footer-container-2 {
-    /* margin-left: 120px; */
+  /* .footer-container-2 { 
   }
   .footer-container-3 {
     margin-left: 120px;
@@ -117,7 +118,7 @@
   }
   .footer-form-sumbit {
     margin: 0;
-  }
+  } */
 
 
 
