--- a/css/tablet.css
+++ b/css/tablet.css
@@ -55,6 +55,71 @@
     width: calc((100% - 48px) / 3);
     flex-basis: 168px;
   }
+  .footer {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+  .footer-container {
+    display: flex;
+    flex-direction: row;
+    gap: 72px 24px;
+    /* gap: 0; */
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 496px;
+    height: 262px;
+  }
+  .footer-container-2 {
+    /* margin-left: 120px; */
+  }
+  .footer-container-3 {
+    /* margin-left: 120px; */
+  }
+  .footer-container-4 {
+
+  }
+  .footer-form-wraper {
+    flex-direction: row;
+  }
+  .footer-logo {
+    display: block;
+  }
+  .footer-title {
+    display: block;
+  }
+  .footer-form-text {
+    display: block;
+  }
+  .footer-form-wraper {
+    flex-direction: row;
+    gap: 24px;
+  }
+  .footer-form-input {
+    width: 232px;
+  }
+  .footer-form-sumbit {
+    margin: 0;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
 
 @media screen and (min-width: 768px), (max-width: 1199px) {
