--- a/css/desktop.css
+++ b/css/desktop.css
@@ -2,6 +2,18 @@
   .container {
     max-width: 1128px;
   }
+  .header-nav-wrap {
+    display: flex;
+    align-items: center;
+    width: 1128px;
+  }
+  .header-nav {
+    /* display: flex;
+    align-items: center; */
+  }
+  .address {
+    margin-left: auto;
+  }
   .hero {
     padding-top: 188px;
     padding-bottom: 188px;
